2009-09-25 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-tmg.c:
    Finished implementation of the slider. It allows dragging of the time
    +/- 5 hours with a resolution of 8 seconds. It is complementary to the
    spin buttons.


2009-09-24 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.c:
    Fixed a bug that caused tree models to be deleted when selecting a new
    satellite group.

    * src/mod-cfg.c:
    Added list of selected satellites and arrow buttons. New satellite selector
    is now fully functional and replaces GtkSatTree.

    * src/gtk-sat-tree.[ch]:
    Removed from build list.


2009-09-23 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Changed EPOCH column type to G_TYPE_DOUBLE (consistent with sat_t).
    Implemented "sat-activated" signal that is triggered when the user
    double click on a satellite.

    * src/mod-cfg.c:
    Connect GtkSatSelector's new "sat-activated" signal to signal handler.


2009-09-18 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Implemented satellite group selector.


2009-08-23 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-selector.[ch]:
    Added files with new satellite selector.


2009-08-12 Alexandru Csete <oz9aec at gmail.com>

    * src/gtk-sat-module-tmg.c:
    Fixed bug 2836265: Time controls should wrap around their limits.


2009-08-09 Alexandru Csete <oz9aec at gmail.com>

    * src/compat.[ch]:
    Added sat_file_name_from_catnum_s (gchar *catnum).

    * src/tle-update.[ch]:
    Updated to new .sat and .cat files.

    * src/main.c:
    * src/qth-data.c
    Avoid using tle-lookup.

    * src/tle-lookup.[ch]:
    Deleted.

    * src/sat-cfg.[ch]:
    Include new TLE files in default.
    Introduced configuration version number.
    Reset SAT_CFG_STR_TLE_FILES if version is < 1.1.


2009-08-07 Alexandru Csete <oz9aec at gmail.com>

    * data/satdata/*.sat: